--- a/people/alumni/files/stacks_page_page5.css
+++ b/people/alumni/files/stacks_page_page5.css
@@ -1064,6 +1064,77 @@
 #stacks_in_265 {
 	font-size: 150%;
 }
+#stacks_in_517>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_517>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_517>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_517>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_517>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_517>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_517 {
+	margin:  20px;
+}
+
+#stacks_in_290 {
+	font-size: 150%;
+}
+
+#stacks_in_537 {
+	font-size: 150%;
+	font-weight: bold;
+}
 #stacks_in_24>.s3_row {
 	margin: 0 -10px;
 }
@@ -1125,10 +1196,6 @@
 
 #stacks_in_24 {
 	margin:  20px;
-}
-
-#stacks_in_290 {
-	font-size: 150%;
 }
 
 #stacks_in_281 {
