--- a/people/current/files/stacks_page_page7.css
+++ b/people/current/files/stacks_page_page7.css
@@ -70,7 +70,79 @@
 	font-weight: bold;
 }
 
-#stacks_in_25 {
+#stacks_in_276 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_256>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_256>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_256>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_256>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_256>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_256>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_256 {
+	margin:  20px;
+}
+
+#stacks_in_259 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_49 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -137,12 +209,12 @@
 	margin:  20px;
 }
 
-#stacks_in_49 {
+#stacks_in_41 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_41 {
+#stacks_in_65 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -209,12 +281,12 @@
 	margin:  20px;
 }
 
-#stacks_in_65 {
+#stacks_in_57 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_57 {
+#stacks_in_81 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -281,12 +353,12 @@
 	margin:  20px;
 }
 
-#stacks_in_81 {
+#stacks_in_73 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_73 {
+#stacks_in_97 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -353,12 +425,12 @@
 	margin:  20px;
 }
 
-#stacks_in_97 {
+#stacks_in_89 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_89 {
+#stacks_in_113 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -425,12 +497,12 @@
 	margin:  20px;
 }
 
-#stacks_in_113 {
+#stacks_in_105 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_105 {
+#stacks_in_129 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -497,12 +569,12 @@
 	margin:  20px;
 }
 
-#stacks_in_129 {
+#stacks_in_121 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_121 {
+#stacks_in_137 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -567,11 +639,6 @@
 
 #stacks_in_16 {
 	margin:  20px;
-}
-
-#stacks_in_137 {
-	font-size: 150%;
-	font-weight: bold;
 }
 
 #stacks_in_155 {
@@ -641,11 +708,6 @@
 
   
 
-#stacks_in_175 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
 #stacks_in_172 {
 	font-size: 150%;
 	font-weight: bold;
@@ -657,6 +719,11 @@
 }
 
 #stacks_in_165 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_197 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -718,13 +785,3 @@
 
 
   
-
-#stacks_in_197 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_188 {
-	font-size: 150%;
-	font-weight: bold;
-}
