--- a/people/alumni/files/stacks_page_page5.css
+++ b/people/alumni/files/stacks_page_page5.css
@@ -1816,6 +1816,11 @@
 	font-size: 150%;
 	font-weight: bold;
 }
+
+#stacks_in_543 {
+	font-size: 150%;
+	font-weight: bold;
+}
 #stacks_in_39>.s3_row {
 	margin: 0 -10px;
 }
