--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -708,6 +708,11 @@
 
   
 
+#stacks_in_310 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
 #stacks_in_172 {
 	font-size: 150%;
 	font-weight: bold;
@@ -719,11 +724,6 @@
 }
 
 #stacks_in_165 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_197 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -771,6 +771,127 @@
 		margin: -10px 0;
 	}
 	#stacks_in_22>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+#stacks_in_279>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_279>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_279>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_279>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_279>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_279>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_197 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_294>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_294>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_294>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_294>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_294>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_294>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
