--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -641,6 +641,11 @@
 	margin:  20px;
 }
 
+#stacks_in_316 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
 #stacks_in_155 {
 	font-size: 150%;
 	font-weight: bold;
