--- a/people/current/files/stacks_page_page7.css
+++ b/people/current/files/stacks_page_page7.css
@@ -790,11 +790,11 @@
 
 
   
-#stacks_in_309>.s3_row {
+#stacks_in_340>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_309>.s3_row>.s3_column {
+#stacks_in_340>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -813,10 +813,10 @@
 
 
 
-	#stacks_in_309>.s3_row  {
+	#stacks_in_340>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_309>.s3_row>.s3_column {
+	#stacks_in_340>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -830,10 +830,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_309>.s3_row  {
+	#stacks_in_340>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_309>.s3_row>.s3_column {
+	#stacks_in_340>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -849,15 +849,20 @@
 
   
 
-#stacks_in_315 {
+#stacks_in_347 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_316>.s3_row {
+
+#stacks_in_344 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_349>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_316>.s3_row>.s3_column {
+#stacks_in_349>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -876,10 +881,10 @@
 
 
 
-	#stacks_in_316>.s3_row  {
+	#stacks_in_349>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_316>.s3_row>.s3_column {
+	#stacks_in_349>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -893,10 +898,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_316>.s3_row  {
+	#stacks_in_349>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_316>.s3_row>.s3_column {
+	#stacks_in_349>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
