--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -853,6 +853,11 @@
 	font-size: 150%;
 	font-weight: bold;
 }
+
+#stacks_in_324 {
+	font-size: 150%;
+	font-weight: bold;
+}
 #stacks_in_294>.s3_row {
 	margin: 0 -10px;
 }
