--- a/people/current/files/stacks_page_page7.css
+++ b/people/current/files/stacks_page_page7.css
@@ -146,11 +146,11 @@
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_10>.s3_row {
+#stacks_in_375>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_10>.s3_row>.s3_column {
+#stacks_in_375>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -169,10 +169,10 @@
 
 
 
-	#stacks_in_10>.s3_row  {
+	#stacks_in_375>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_10>.s3_row>.s3_column {
+	#stacks_in_375>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -186,10 +186,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_10>.s3_row  {
+	#stacks_in_375>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_10>.s3_row>.s3_column {
+	#stacks_in_375>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -205,24 +205,24 @@
 
   
 
-#stacks_in_10 {
+#stacks_in_375 {
 	margin:  20px;
 }
 
-#stacks_in_41 {
+#stacks_in_386 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_65 {
+#stacks_in_378 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_11>.s3_row {
+#stacks_in_392>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_11>.s3_row>.s3_column {
+#stacks_in_392>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -241,10 +241,10 @@
 
 
 
-	#stacks_in_11>.s3_row  {
+	#stacks_in_392>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_11>.s3_row>.s3_column {
+	#stacks_in_392>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -258,10 +258,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_11>.s3_row  {
+	#stacks_in_392>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_11>.s3_row>.s3_column {
+	#stacks_in_392>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -277,24 +277,24 @@
 
   
 
-#stacks_in_11 {
+#stacks_in_392 {
 	margin:  20px;
 }
 
-#stacks_in_57 {
+#stacks_in_403 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_81 {
+#stacks_in_395 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_12>.s3_row {
+#stacks_in_409>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_12>.s3_row>.s3_column {
+#stacks_in_409>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -313,10 +313,10 @@
 
 
 
-	#stacks_in_12>.s3_row  {
+	#stacks_in_409>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_12>.s3_row>.s3_column {
+	#stacks_in_409>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -330,10 +330,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_12>.s3_row  {
+	#stacks_in_409>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_12>.s3_row>.s3_column {
+	#stacks_in_409>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -349,24 +349,24 @@
 
   
 
-#stacks_in_12 {
+#stacks_in_409 {
 	margin:  20px;
 }
 
-#stacks_in_73 {
+#stacks_in_420 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_97 {
+#stacks_in_412 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_13>.s3_row {
+#stacks_in_426>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_13>.s3_row>.s3_column {
+#stacks_in_426>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -385,10 +385,10 @@
 
 
 
-	#stacks_in_13>.s3_row  {
+	#stacks_in_426>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_13>.s3_row>.s3_column {
+	#stacks_in_426>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -402,10 +402,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_13>.s3_row  {
+	#stacks_in_426>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_13>.s3_row>.s3_column {
+	#stacks_in_426>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -421,24 +421,24 @@
 
   
 
-#stacks_in_13 {
+#stacks_in_426 {
 	margin:  20px;
 }
 
-#stacks_in_89 {
+#stacks_in_437 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_113 {
+#stacks_in_429 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_14>.s3_row {
+#stacks_in_443>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_14>.s3_row>.s3_column {
+#stacks_in_443>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -457,10 +457,10 @@
 
 
 
-	#stacks_in_14>.s3_row  {
+	#stacks_in_443>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_14>.s3_row>.s3_column {
+	#stacks_in_443>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -474,10 +474,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_14>.s3_row  {
+	#stacks_in_443>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_14>.s3_row>.s3_column {
+	#stacks_in_443>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -493,16 +493,16 @@
 
   
 
-#stacks_in_14 {
+#stacks_in_443 {
 	margin:  20px;
 }
 
-#stacks_in_105 {
+#stacks_in_454 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_129 {
+#stacks_in_446 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -569,12 +569,12 @@
 	margin:  20px;
 }
 
-#stacks_in_121 {
+#stacks_in_129 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_137 {
+#stacks_in_121 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -641,12 +641,79 @@
 	margin:  20px;
 }
 
-#stacks_in_334 {
+#stacks_in_137 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_326 {
+#stacks_in_334 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_358>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_358>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_358>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_358>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_358>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_358>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_358 {
+	margin:  20px;
+}
+
+#stacks_in_361 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -718,17 +785,7 @@
 	font-weight: bold;
 }
 
-#stacks_in_290 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_287 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_284 {
+#stacks_in_344 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -776,132 +833,6 @@
 		margin: -10px 0;
 	}
 	#stacks_in_294>.s3_row>.s3_column {
-		padding: 10px 0;
-		width:100%;
-	}
-
-
-
-
-
-}
-
-
-
-
-  
-#stacks_in_340>.s3_row {
-	margin: 0 -10px;
-}
-
-#stacks_in_340>.s3_row>.s3_column {
-	padding: 0 10px;
-}
-
-
-
-
-
-
-
-
-  
-
-
-@media only screen and (max-width: 770px) {
-
-
-
-
-	#stacks_in_340>.s3_row  {
-		margin: -10px -10px;
-	}
-	#stacks_in_340>.s3_row>.s3_column {
-		padding: 10px 10px;
-		width:50%;
-	}
-
-
-
-}
-
-
-
-@media only screen and (max-width: 400px) {
-
-
-	#stacks_in_340>.s3_row  {
-		margin: -10px 0;
-	}
-	#stacks_in_340>.s3_row>.s3_column {
-		padding: 10px 0;
-		width:100%;
-	}
-
-
-
-
-
-}
-
-
-
-
-  
-
-#stacks_in_347 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_344 {
-	font-size: 150%;
-	font-weight: bold;
-}
-#stacks_in_349>.s3_row {
-	margin: 0 -10px;
-}
-
-#stacks_in_349>.s3_row>.s3_column {
-	padding: 0 10px;
-}
-
-
-
-
-
-
-
-
-  
-
-
-@media only screen and (max-width: 770px) {
-
-
-
-
-	#stacks_in_349>.s3_row  {
-		margin: -10px -10px;
-	}
-	#stacks_in_349>.s3_row>.s3_column {
-		padding: 10px 10px;
-		width:50%;
-	}
-
-
-
-}
-
-
-
-@media only screen and (max-width: 400px) {
-
-
-	#stacks_in_349>.s3_row  {
-		margin: -10px 0;
-	}
-	#stacks_in_349>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
