--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -214,7 +214,7 @@
 	font-weight: bold;
 }
 
-#stacks_in_65 {
+#stacks_in_355 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -281,12 +281,12 @@
 	margin:  20px;
 }
 
-#stacks_in_57 {
+#stacks_in_65 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_81 {
+#stacks_in_57 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -353,12 +353,12 @@
 	margin:  20px;
 }
 
-#stacks_in_73 {
+#stacks_in_81 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_97 {
+#stacks_in_73 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -425,12 +425,12 @@
 	margin:  20px;
 }
 
-#stacks_in_89 {
+#stacks_in_97 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_113 {
+#stacks_in_89 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -497,12 +497,12 @@
 	margin:  20px;
 }
 
-#stacks_in_105 {
+#stacks_in_113 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_129 {
+#stacks_in_105 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -569,12 +569,12 @@
 	margin:  20px;
 }
 
-#stacks_in_121 {
+#stacks_in_129 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_137 {
+#stacks_in_121 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -641,12 +641,79 @@
 	margin:  20px;
 }
 
-#stacks_in_316 {
+#stacks_in_137 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_155 {
+#stacks_in_316 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_327>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_327>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_327>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_327>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_327>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_327>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_327 {
+	margin:  20px;
+}
+
+#stacks_in_330 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -718,17 +785,7 @@
 	font-weight: bold;
 }
 
-#stacks_in_172 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_168 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_165 {
+#stacks_in_324 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -776,132 +833,6 @@
 		margin: -10px 0;
 	}
 	#stacks_in_22>.s3_row>.s3_column {
-		padding: 10px 0;
-		width:100%;
-	}
-
-
-
-
-
-}
-
-
-
-
-  
-#stacks_in_279>.s3_row {
-	margin: 0 -10px;
-}
-
-#stacks_in_279>.s3_row>.s3_column {
-	padding: 0 10px;
-}
-
-
-
-
-
-
-
-
-  
-
-
-@media only screen and (max-width: 770px) {
-
-
-
-
-	#stacks_in_279>.s3_row  {
-		margin: -10px -10px;
-	}
-	#stacks_in_279>.s3_row>.s3_column {
-		padding: 10px 10px;
-		width:50%;
-	}
-
-
-
-}
-
-
-
-@media only screen and (max-width: 400px) {
-
-
-	#stacks_in_279>.s3_row  {
-		margin: -10px 0;
-	}
-	#stacks_in_279>.s3_row>.s3_column {
-		padding: 10px 0;
-		width:100%;
-	}
-
-
-
-
-
-}
-
-
-
-
-  
-
-#stacks_in_197 {
-	font-size: 150%;
-	font-weight: bold;
-}
-
-#stacks_in_324 {
-	font-size: 150%;
-	font-weight: bold;
-}
-#stacks_in_294>.s3_row {
-	margin: 0 -10px;
-}
-
-#stacks_in_294>.s3_row>.s3_column {
-	padding: 0 10px;
-}
-
-
-
-
-
-
-
-
-  
-
-
-@media only screen and (max-width: 770px) {
-
-
-
-
-	#stacks_in_294>.s3_row  {
-		margin: -10px -10px;
-	}
-	#stacks_in_294>.s3_row>.s3_column {
-		padding: 10px 10px;
-		width:50%;
-	}
-
-
-
-}
-
-
-
-@media only screen and (max-width: 400px) {
-
-
-	#stacks_in_294>.s3_row  {
-		margin: -10px 0;
-	}
-	#stacks_in_294>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
