--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -209,7 +209,7 @@
 	margin:  20px;
 }
 
-#stacks_in_355 {
+#stacks_in_404 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -281,12 +281,12 @@
 	margin:  20px;
 }
 
-#stacks_in_57 {
+#stacks_in_402 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_73 {
+#stacks_in_57 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -353,12 +353,12 @@
 	margin:  20px;
 }
 
-#stacks_in_97 {
+#stacks_in_73 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_89 {
+#stacks_in_97 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -425,12 +425,12 @@
 	margin:  20px;
 }
 
-#stacks_in_113 {
+#stacks_in_89 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_105 {
+#stacks_in_113 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -497,12 +497,12 @@
 	margin:  20px;
 }
 
-#stacks_in_129 {
+#stacks_in_105 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_121 {
+#stacks_in_129 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -569,12 +569,12 @@
 	margin:  20px;
 }
 
-#stacks_in_137 {
+#stacks_in_121 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_316 {
+#stacks_in_137 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -639,6 +639,11 @@
 
 #stacks_in_366 {
 	margin:  20px;
+}
+
+#stacks_in_316 {
+	font-size: 150%;
+	font-weight: bold;
 }
 
 #stacks_in_369 {
