--- a/people/page/files/stacks_page_page4.css
+++ b/people/page/files/stacks_page_page4.css
@@ -137,12 +137,12 @@
 	margin:  20px;
 }
 
-#stacks_in_49 {
+#stacks_in_388 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_355 {
+#stacks_in_49 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -209,12 +209,12 @@
 	margin:  20px;
 }
 
-#stacks_in_65 {
+#stacks_in_404 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_57 {
+#stacks_in_65 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -281,12 +281,12 @@
 	margin:  20px;
 }
 
-#stacks_in_73 {
+#stacks_in_402 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_97 {
+#stacks_in_57 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -353,12 +353,12 @@
 	margin:  20px;
 }
 
-#stacks_in_89 {
+#stacks_in_73 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_113 {
+#stacks_in_97 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -425,12 +425,12 @@
 	margin:  20px;
 }
 
-#stacks_in_105 {
+#stacks_in_89 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_129 {
+#stacks_in_113 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -497,12 +497,12 @@
 	margin:  20px;
 }
 
-#stacks_in_121 {
+#stacks_in_105 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_137 {
+#stacks_in_129 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -569,12 +569,84 @@
 	margin:  20px;
 }
 
+#stacks_in_121 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_137 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_366>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_366>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_366>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_366>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_366>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_366>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_366 {
+	margin:  20px;
+}
+
 #stacks_in_316 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_330 {
+#stacks_in_369 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -641,12 +713,22 @@
 
   
 
+#stacks_in_392 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
 #stacks_in_310 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
 #stacks_in_324 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_394 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -708,3 +790,13 @@
 
 
   
+
+#stacks_in_396 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_398 {
+	font-size: 150%;
+	font-weight: bold;
+}
