--- a/people/alumni/files/stacks_page_page5.css
+++ b/people/alumni/files/stacks_page_page5.css
@@ -1270,12 +1270,79 @@
 	margin:  20px;
 }
 
-#stacks_in_537 {
+#stacks_in_685 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_664 {
+#stacks_in_676 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_665>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_665>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_665>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_665>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_665>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_665>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_665 {
+	margin:  20px;
+}
+
+#stacks_in_668 {
 	font-size: 150%;
 }
 
