--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -502,7 +502,7 @@
 	font-weight: bold;
 }
 
-#stacks_in_316 {
+#stacks_in_416 {
 	font-size: 150%;
 	font-weight: bold;
 }
@@ -567,6 +567,11 @@
 
 #stacks_in_366 {
 	margin:  20px;
+}
+
+#stacks_in_316 {
+	font-size: 150%;
+	font-weight: bold;
 }
 
 #stacks_in_369 {
