--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -65,12 +65,84 @@
 	margin:  20px;
 }
 
-#stacks_in_259 {
+#stacks_in_477 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_388 {
+#stacks_in_479 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_457>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_457>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_457>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_457>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_457>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_457>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_457 {
+	margin:  20px;
+}
+
+#stacks_in_468 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_460 {
 	font-size: 150%;
 	font-weight: bold;
 }
