--- a/people/page/files/stacks_page_page4.css
+++ b/people/page/files/stacks_page_page4.css
@@ -2,6 +2,78 @@
 #stacks_in_7 {
 	font-size: 300%;
 }
+#stacks_in_455>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_455>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_455>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_455>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_455>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_455>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_455 {
+	margin:  20px;
+}
+
+#stacks_in_466 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_458 {
+	font-size: 150%;
+	font-weight: bold;
+}
 #stacks_in_9>.s3_row {
 	margin: 0 -10px;
 }
