--- a/people/files/stacks_page_page3.css
+++ b/people/files/stacks_page_page3.css
@@ -146,11 +146,11 @@
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_256>.s3_row {
+#stacks_in_484>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_256>.s3_row>.s3_column {
+#stacks_in_484>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -169,10 +169,10 @@
 
 
 
-	#stacks_in_256>.s3_row  {
+	#stacks_in_484>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_256>.s3_row>.s3_column {
+	#stacks_in_484>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -186,10 +186,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_256>.s3_row  {
+	#stacks_in_484>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_256>.s3_row>.s3_column {
+	#stacks_in_484>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -205,24 +205,24 @@
 
   
 
-#stacks_in_256 {
+#stacks_in_484 {
 	margin:  20px;
 }
 
-#stacks_in_49 {
+#stacks_in_495 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_65 {
+#stacks_in_487 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_12>.s3_row {
+#stacks_in_501>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_12>.s3_row>.s3_column {
+#stacks_in_501>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -241,10 +241,10 @@
 
 
 
-	#stacks_in_12>.s3_row  {
+	#stacks_in_501>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_12>.s3_row>.s3_column {
+	#stacks_in_501>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -258,10 +258,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_12>.s3_row  {
+	#stacks_in_501>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_12>.s3_row>.s3_column {
+	#stacks_in_501>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -277,24 +277,24 @@
 
   
 
-#stacks_in_12 {
+#stacks_in_501 {
 	margin:  20px;
 }
 
-#stacks_in_402 {
+#stacks_in_512 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_57 {
+#stacks_in_504 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_13>.s3_row {
+#stacks_in_518>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_13>.s3_row>.s3_column {
+#stacks_in_518>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -313,10 +313,10 @@
 
 
 
-	#stacks_in_13>.s3_row  {
+	#stacks_in_518>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_13>.s3_row>.s3_column {
+	#stacks_in_518>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -330,10 +330,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_13>.s3_row  {
+	#stacks_in_518>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_13>.s3_row>.s3_column {
+	#stacks_in_518>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -349,24 +349,24 @@
 
   
 
-#stacks_in_13 {
+#stacks_in_518 {
 	margin:  20px;
 }
 
-#stacks_in_73 {
+#stacks_in_529 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_97 {
+#stacks_in_521 {
 	font-size: 150%;
 	font-weight: bold;
 }
-#stacks_in_14>.s3_row {
+#stacks_in_535>.s3_row {
 	margin: 0 -10px;
 }
 
-#stacks_in_14>.s3_row>.s3_column {
+#stacks_in_535>.s3_row>.s3_column {
 	padding: 0 10px;
 }
 
@@ -385,10 +385,10 @@
 
 
 
-	#stacks_in_14>.s3_row  {
+	#stacks_in_535>.s3_row  {
 		margin: -10px -10px;
 	}
-	#stacks_in_14>.s3_row>.s3_column {
+	#stacks_in_535>.s3_row>.s3_column {
 		padding: 10px 10px;
 		width:50%;
 	}
@@ -402,10 +402,10 @@
 @media only screen and (max-width: 400px) {
 
 
-	#stacks_in_14>.s3_row  {
+	#stacks_in_535>.s3_row  {
 		margin: -10px 0;
 	}
-	#stacks_in_14>.s3_row>.s3_column {
+	#stacks_in_535>.s3_row>.s3_column {
 		padding: 10px 0;
 		width:100%;
 	}
@@ -421,16 +421,88 @@
 
   
 
-#stacks_in_14 {
+#stacks_in_535 {
 	margin:  20px;
 }
 
-#stacks_in_89 {
+#stacks_in_546 {
 	font-size: 150%;
 	font-weight: bold;
 }
 
-#stacks_in_113 {
+#stacks_in_538 {
+	font-size: 150%;
+	font-weight: bold;
+}
+#stacks_in_552>.s3_row {
+	margin: 0 -10px;
+}
+
+#stacks_in_552>.s3_row>.s3_column {
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
+
+  
+
+
+@media only screen and (max-width: 770px) {
+
+
+
+
+	#stacks_in_552>.s3_row  {
+		margin: -10px -10px;
+	}
+	#stacks_in_552>.s3_row>.s3_column {
+		padding: 10px 10px;
+		width:50%;
+	}
+
+
+
+}
+
+
+
+@media only screen and (max-width: 400px) {
+
+
+	#stacks_in_552>.s3_row  {
+		margin: -10px 0;
+	}
+	#stacks_in_552>.s3_row>.s3_column {
+		padding: 10px 0;
+		width:100%;
+	}
+
+
+
+
+
+}
+
+
+
+
+  
+
+#stacks_in_552 {
+	margin:  20px;
+}
+
+#stacks_in_563 {
+	font-size: 150%;
+	font-weight: bold;
+}
+
+#stacks_in_555 {
 	font-size: 150%;
 	font-weight: bold;
 }
